<resources>
    <string name="exit">退出150?</string>
    <string name="money_sale">(%1$d)元</string>
    <string name="need_to_pay">需支付</string>
    <string name="confirmed_code">已确认消费码</string>
    <string name="not_code">未确认消费码</string>
    <string name="ing">进行中</string>
    <string name="rejected">已拒绝</string>
    <string name="agreed">已同意</string>
    <string name="rfeuse">拒绝</string>
    <string name="operation_failure">操作失败</string>
    <string name="system_app_item_mer">商家:</string>
    <string name="system_app_item_name">套餐名称:</string>
    <string name="system_app_item_total">套餐总价:</string>
    <string name="system_app_item_desc">说明:</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
    <string name="The_file_is_not_greater_than_10_m">文件不能大于10M</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="Move_into_blacklist_success">移入黑名单成功</string>
    <string name="Move_into_blacklist_failure">移入黑名单失败</string>
    <string name="unable_to_get_loaction">无法获取到您的位置信息!</string>
    <string name="Send_the_following_pictures">发送以下图片？</string>
    <string name="Download_the_pictures_new">下载图片:</string>
    <string name="Download_the_pictures">下载图片: 0%</string>
    <string name="downwaiting">正在下载文件请稍后</string>
    <string name="Failed_to_download_file">下载文件失败:</string>
    <string name="Have_downloaded">已下载</string>
    <string name="Did_not_download">未下载</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="not_download">未下载:</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="auth_student">学生认证</string>
    <string name="upload_more">上传更多</string>
    <string name="order_details_title">订单详情</string>
    <string name="order_details_num">订单号</string>
    <string name="order_details_status">订单状态</string>
    <string name="order_details_type">订单类型</string>
    <string name="order_details_date">订单日期</string>
    <string name="order_details_pingfen">评分:</string>
    <string name="order_details_pay_mode">支付方式</string>
    <string name="order_details_refund_date">退款日期</string>
    <string name="order_details_totak">订单总额</string>
    <string name="order_details_value">优惠券</string>
    <string name="order_details_rapy_ratio">付款比例</string>
    <string name="order_details_refund">已退款</string>
    <string name="order_evaluation">评价</string>
    <string name="order_real_payment">实付款:</string>
    <string name="order_money">￥%1$s</string>
    <string name="input_num">最多输入%1$s秒后重发个字符</string>
    <string name="input_sign_hint">请输入你的个性签名</string>
    <string name="input_nickname_hint">请输入你的昵称</string>
    <string name="voice_play">播放录音</string>
    <string name="voice_play_speak">按住说话</string>
    <string name="voice_reset">重新录制</string>
    <string name="voice_del">删除录音</string>
    <string name="alipay_status_all">全部</string>
    <string name="alipay_status_pay">待付</string>
    <string name="alipay_status_cancel">取消</string>
    <string name="alipay_status_ed">已付</string>
    <string name="alipay_status_ok">完成</string>
    <string name="mine_head_look">查看大头像</string>
    <string name="mine_head_select">选择认证照片</string>
    <string name="mine_head_dopick">拍照</string>
    <string name="info_voice">语音介绍</string>
    <string name="info_pic">相册</string>
    <string name="info_sign">个性签名</string>
    <string name="info_base">基本资料</string>
    <string name="info_nickname">昵称</string>
    <string name="info_birthday">生日</string>
    <string name="auth_pic_title">照片认证 </string>
    <string name="auth_pic_no_desc">你还没有认证照片哦</string>
    <string name="wallet_accout">帐户余额 </string>
    <string name="wallet_money">现金</string>
    <string name="wallet_gold">金币</string>
    <string name="wallet_value">优惠券</string>
    <string name="wallet_gold_to_value">兑换</string>
    <string name="wallet_item_title">%1$s元优惠券</string>
    <string name="wallet_item_num">到期时间%1$s天</string>
    <string name="setting_opt1">对普通用户可见 </string>
    <string name="setting_opt2">修改密码</string>
    <string name="setting_opt3">手势密码</string>
    <string name="setting_opt4">清除缓存</string>
    <string name="setting_opt5">关于150</string>
    <string name="setting_opt6">用户协议</string>
    <string name="setting_opt7">意见反馈</string>
    <string name="setting_opt8">软件更新</string>
    <string name="setting_exit">退出登录</string>
    <string name="app_name">一百五</string>
    <string name="session">会话</string>
    <string name="Cant_chat_with_yourself">不能和自己聊天</string>
    <string name="user_option1">钱包</string>
    <string name="user_option2">认证</string>
    <string name="user_option3">进行中</string>
    <string name="user_option4">订单</string>
    <string name="user_option5">动态</string>
    <string name="user_option6">关注</string>
    <string name="user_option7">联系人</string>
    <string name="user_option8">初遇点</string>
    <string name="user_option9">资料</string>
    <string name="user_option10">设置</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">voice</string>
    <string name="picture">[picture]</string>
    <string name="video">[video]</string>
    <string name="file">[file]</string>
    <string name="voice_call">[voice call]</string>
    <string name="reg_acc">注册帐号</string>
    <string name="wechat">微信</string>
    <string name="fellowship">联谊</string>
    <string name="date">约会</string>
    <string name="news">消息</string>
    <string name="mine">我的</string>
    <string name="friend">好友</string>
    <string name="nearby">附近</string>
    <string name="hot">热门</string>
    <string name="newest">最新</string>
    <string name="more_female">妹子多</string>
    <string name="more_male">帅哥多</string>
    <string name="weekend">周末</string>
    <string name="many_people_chose">手慢无</string>
    <string name="lower_price">价格低</string>
    <string name="multiply_img">多图</string>
    <string name="distance">距离</string>
    <string name="active_filters">活动筛选</string>
    <string name="activitytype">活动类型</string>
    <string name="campusactivity">校园活动</string>
    <string name="makefriendactivity">交友活动</string>
    <string name="activityareas">活动地区</string>
    <string name="all">全部</string>
    <string name="JiangbeiDistrict">江北区</string>
    <string name="Yuzhongdistrict">渝中区</string>
    <string name="ShapingbaDistrict">沙坪坝区</string>
    <string name="Nanandistrict">南岸区</string>
    <string name="YubeiDistrict">渝北区</string>
    <string name="activetime">活动时间:</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="thisweek">本周</string>
    <string name="thismonth">本月</string>
    <string name="activeprice">活动价格</string>
    <string name="reset">重置</string>
    <string name="confirm">确定</string>
    <string name="kilometer">%1$s千米</string>
    <string name="member_number">%1$d人</string>
    <string name="member_cost">%1$s元</string>
    <string name="member_age_range">%1$s后</string>
    <string name="step_0">1</string>
    <string name="step_0_des">签到入场</string>
    <string name="step_1">2</string>
    <string name="step_1_des">领取卡片</string>
    <string name="step_2">3</string>
    <string name="step_2_des">自我介绍</string>
    <string name="step_3">4</string>
    <string name="step_3_des">游戏环节</string>
    <string name="step_4">5</string>
    <string name="step_4_des">牵手心仪对象</string>
    <string name="step_5">6</string>
    <string name="step_5_des">活动完成</string>
    <string name="add_contacts">通讯录</string>
    <string name="appointment">预约</string>
    <string name="present">现场约</string>
    <string name="now_date">立即约</string>
    <string name="bussin">商家</string>
    <string name="combo">套餐费:</string>
    <string name="payment_proportion">付款比例:</string>
    <string name="me_pay">我付</string>
    <string name="aa_pay">AA</string>
    <string name="mytableNum">我的桌号:</string>
    <string name="you_pay">你付</string>
    <string name="age">岁</string>
    <string name="hou">后</string>
    <string name="mi">m</string>
    <string name="detailed_information">详细资料</string>
    <string name="visitor">最近来访:</string>
    <string name="from">来自:</string>
    <string name="allVis">总访问量</string>
    <string name="ghq">根号七</string>
    <string name="care">关注</string>
    <string name="add_date">加入约单</string>
    <string name="photo">相册</string>
    <string name="like">喜欢</string>
    <string name="detailed">详情</string>
    <string name="change">更换</string>
    <string name="date_fee">约会服务费</string>
    <string name="date_time">约会时间</string>
    <string name="state">说明:</string>
    <string name="payment_method">支付方式</string>
    <string name="date_statement">* 可选三个时间，最终由对方选择其中一个进行约会。</string>
    <string name="date_text">交个朋友，吃饭聊天</string>
    <string name="date_text_go">这家不错，一起去吧</string>
    <string name="coupon">优惠券</string>
    <string name="cash">现金余额</string>
    <string name="now_user">当前使用</string>
    <string name="tt_yuan">20元优惠券</string>
    <string name="order_information">订单信息</string>
    <string name="alipay">支付宝</string>
    <string name="credit_card">信用卡</string>
    <string name="confirm_order">确认付款</string>
    <string name="yuan">元</string>
    <string name="user_info">基本信息:</string>
    <string name="user_name">姓名:</string>
    <string name="user_sex">性别:</string>
    <string name="user_phone">手机号码:</string>
    <string name="user_pay_detail">付款详情</string>
    <string name="user_order_info">支付宝账户</string>
    <string name="user_alipay_account">支付宝账户</string>
    <string name="user_pay_way">付款方式</string>
    <string name="user_need_pay">需付款</string>
    <string name="congratulation">恭喜你，报名成功！</string>
    <string name="order_no">订单号:</string>
    <string name="meet_name">活动名称:</string>
    <string name="meet_date">活动时间:</string>
    <string name="meet_location">活动地点:</string>
    <string name="meet_cost">活动费用:</string>
    <string name="business_phone">商家电话:</string>
    <string name="pay_mode">支付方式:</string>
    <string name="contact">联系商家</string>
    <string name="order_list">订单列表</string>
    <string name="ad_look">聚会</string>
    <string name="ad_enterpise">约会</string>
    <string name="ad_message">消息</string>
    <string name="ad_mine">我</string>
</resources>