<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_normal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/px40"
        android:drawableLeft="@drawable/commit_enroll_success"
        android:text="@string/congratulation"
        android:textColor="@color/red_font"
        android:textSize="@dimen/font_50px" />

    <TextView
        android:id="@+id/tv_order_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px20"
        android:layout_marginTop="@dimen/px40"
        android:text="@string/order_information"
        android:textSize="@dimen/font_32px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="@dimen/px20"
        android:layout_marginLeft="@dimen/px20"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_order_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:text="@string/order_no"
            android:textColor="@color/clicked_grey_light"
            android:textSize="@dimen/font_32px" />

        <TextView
            android:id="@+id/tv_meet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:text="@string/meet_name"
            android:textColor="@color/clicked_grey_light"
            android:textSize="@dimen/font_32px" />

        <TextView
            android:id="@+id/tv_meet_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:text="@string/meet_date"
            android:textColor="@color/clicked_grey_light"
            android:textSize="@dimen/font_32px" />

        <TextView
            android:id="@+id/tv_meet_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:text="@string/meet_location"
            android:textColor="@color/clicked_grey_light"
            android:textSize="@dimen/font_32px" />

        <TextView
            android:id="@+id/tv_meet_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:text="@string/meet_cost"
            android:textColor="@color/clicked_grey_light"
            android:textSize="@dimen/font_32px" />

        <TextView
            android:id="@+id/tv_pay_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:text="@string/pay_mode"
            android:textColor="@color/clicked_grey_light"
            android:textSize="@dimen/font_32px" />

        <TextView
            android:id="@+id/tv_business_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:text="@string/business_phone"
            android:textColor="@color/clicked_grey_light"
            android:textSize="@dimen/font_32px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/px20"
        android:layout_marginRight="@dimen/px10"
         android:layout_marginEnd="@dimen/px10"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_call_organizer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/px10"
            android:layout_weight="1"
            android:background="@drawable/business_contact"
            android:layout_marginLeft="@dimen/px10"
            android:text="@string/contact" />

        <Button
            android:id="@+id/btn_list_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px10"
            android:layout_weight="1"
            android:background="@drawable/order_list"
            android:text="@string/order_list" />
    </LinearLayout>

</LinearLayout>