<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_grey"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"
        android:orientation="vertical" >
    </LinearLayout>

   

    <View
        style="@style/layout_border_vertical"
        android:layout_width="match_parent" />

    <RadioGroup
        android:id="@+id/main_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px98"
        android:orientation="horizontal"
        android:paddingTop="@dimen/px10" >

        <RadioButton
            android:id="@+id/main_meet"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/fragment_meet_selector"
            android:gravity="center"
            android:text="@string/ad_look"
            android:textColor="@drawable/red_grey_txt_selector"
            android:textSize="@dimen/font_20px" />

        <RadioButton
            android:id="@+id/main_date"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/fragment_date_selector"
            android:gravity="center"
            android:text="@string/ad_enterpise"
            android:textColor="@drawable/red_grey_txt_selector"
            android:textSize="@dimen/font_20px" />

        <RadioButton
            android:id="@+id/main_message"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/fragment_message_selector"
            android:gravity="center"
            android:text="@string/ad_message"
            android:textColor="@drawable/red_grey_txt_selector"
            android:textSize="@dimen/font_20px" />
        
        <RadioButton
            android:id="@+id/main_mine"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:button="@null"
            android:drawableTop="@drawable/fragment_mine_selector"
            android:gravity="center"
            android:text="@string/ad_mine"
            android:textColor="@drawable/red_grey_txt_selector"
            android:textSize="@dimen/font_20px" />
    </RadioGroup>
    
</LinearLayout>